resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  labels:
    app: home-assistant
spec:
  type: LoadBalancer
  ports:
  - port: 8123
  selector:
    app: home-assistant
